--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <nav class="navbar navbar-expand-md navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="logo navbar-brand" href="index.html">Blogs</a>
+            <a class="logo navbar-brand" href="blog.html">Blogs</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <svg class="svg-inline--fa fa-bars" aria-hidden="true" focusable="false" data-prefix="fas"
