--- a/contents/cagsawa.html
+++ b/contents/cagsawa.html
@@ -54,19 +54,21 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
-                    <p>Mayon Volcano, located in the province of Albay in the Bicol Region of the Philippines, is
-                        renowned for its near-perfect symmetrical cone shape. Standing at 2,463 meters (8,081 feet), it
-                        is one of the most active volcanoes in the country and a prominent symbol of natural beauty and
-                        danger. Its frequent eruptions have shaped both the landscape and the lives of the people living
-                        around it, making it a vital part of Bicolano culture and identity.</p>
-                    <p>The volcano is part of the Pacific Ring of Fire, a region prone to earthquakes and volcanic
-                        activity. Despite its destructive potential, Mayon’s breathtaking beauty attracts tourists,
-                        photographers, and scientists from around the world. Its lush green slopes contrast with the
-                        gray lava flows from past eruptions, creating a dramatic and picturesque landscape.</p>
-                    <p>Mayon is not just a geological wonder but also a cultural icon, deeply embedded in local legends,
-                        art, and traditions. From ancient folklore to modern-day festivals, the volcano remains a source
-                        of pride and reverence for the Bicolano people. Its presence influences daily life, agriculture,
-                        and even spirituality in the region.</p>
+                    <p>Brief description of Cagsawa Ruins (what it is today).
+                        The Cagsawa Ruins (also spelled as Kagsawa, historically spelled as Cagsaua) are the remnants of
+                        a 16th-century Franciscan church, the Cagsawa church. It was originally built in the town of
+                        Cagsawa in 1587 but was burned down and destroyed by Dutch pirates in 1636. It was rebuilt in
+                        1724 by Fr. Francisco Blanco but was destroyed again, along with the town of Cagsawa, on
+                        February 1, 1814, during the eruption of Mayon Volcano.
+                    </p>
+                    <p>The ruins are currently located in Barangay Busay, Cagsawa, in the municipality of Daraga, Albay,
+                        Philippines. It is part of Cagsawa Park, is protected and maintained by the municipal government
+                        of Daraga and the National Museum of the Philippines, and is one of the most popular tourist
+                        destinations in the area. The Internationale Tourismus-Börse Berlin, one of the world's top
+                        travel trade shows based in Berlin, has even recognized the site as one of the places to visit
+                        in Asia. A preliminary excavation of the Cagsawa ruins by the Bulacan State University, show
+                        that the Spanish incorporated Mesoamerican influences in constructing the complex. </p>
+                        
                     <h2 class="section-heading">History</h2>
                     <p>1616 Eruption – Mayon’s first recorded eruption occurred in 1616, spewing ash and lava. Spanish
                         colonizers documented the event, marking the beginning of its historical volcanic activity. The
