--- a/contents/church-ruins.html
+++ b/contents/church-ruins.html
@@ -54,94 +54,90 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
-                    <p>Mayon Volcano, located in the province of Albay in the Bicol Region of the Philippines, is
-                        renowned for its near-perfect symmetrical cone shape. Standing at 2,463 meters (8,081 feet), it
-                        is one of the most active volcanoes in the country and a prominent symbol of natural beauty and
-                        danger. Its frequent eruptions have shaped both the landscape and the lives of the people living
-                        around it, making it a vital part of Bicolano culture and identity.</p>
-                    <p>The volcano is part of the Pacific Ring of Fire, a region prone to earthquakes and volcanic
-                        activity. Despite its destructive potential, Mayon’s breathtaking beauty attracts tourists,
-                        photographers, and scientists from around the world. Its lush green slopes contrast with the
-                        gray lava flows from past eruptions, creating a dramatic and picturesque landscape.</p>
-                    <p>Mayon is not just a geological wonder but also a cultural icon, deeply embedded in local legends,
-                        art, and traditions. From ancient folklore to modern-day festivals, the volcano remains a source
-                        of pride and reverence for the Bicolano people. Its presence influences daily life, agriculture,
-                        and even spirituality in the region.</p>
                     <h2 class="section-heading">History</h2>
-                    <p>1616 Eruption – Mayon’s first recorded eruption occurred in 1616, spewing ash and lava. Spanish
-                        colonizers documented the event, marking the beginning of its historical volcanic activity. The
-                        eruption caused significant damage to nearby settlements. It set the precedent for future
-                        evacuations and disaster responses.</p>
-                    <p>1814 Eruption – One of Mayon’s deadliest eruptions buried the town of Cagsawa, killing over 1,200
-                        people. Only the bell tower of Cagsawa Church remains visible today as a grim reminder. The
-                        eruption also destroyed several other villages. Ashfall reached as far as present-day Legazpi
-                        City.</p>
-                    <p>1897 Eruption – This violent eruption lasted for seven days, with lava flows reaching the lower
-                        slopes. It caused massive evacuations and economic disruption. The event was one of the most
-                        visually documented eruptions of the 19th century. It reinforced Mayon’s reputation as both
-                        beautiful and deadly.</p>
-                    <p>1984 Eruption – A major eruption prompted the evacuation of over 73,000 people. Lava fountains
-                        and pyroclastic flows devastated nearby farmlands. The Philippine government and international
-                        agencies closely monitored the event. Despite the destruction, no fatalities were recorded due
-                        to effective disaster response.</p>
-                    <p>2018 Eruption – A phreatic (steam-driven) eruption led to ash plumes rising kilometers into the
-                        sky. Thousands were evacuated as lava flows and pyroclastic density currents threatened
-                        communities. The eruption lasted several months, disrupting flights and agriculture. It
-                        highlighted the need for constant volcanic monitoring and preparedness.</p>
-                    <h2 class="section-heading">Facts</h2>
-                    <p>Mayon’s near-perfect conical shape is the result of its stratovolcano structure, built up by
-                        layers of hardened lava, ash, and volcanic rocks from past eruptions. Unlike other volcanoes
-                        that may have irregular shapes due to explosive eruptions or landslides, Mayon’s eruptions
-                        typically produce viscous lava that flows symmetrically down its slopes. This consistent
-                        eruptive behavior over centuries has maintained its iconic form.</p>
-                    <p>Scientists study Mayon’s eruptions to understand volcanic behavior better. Its frequent activity
-                        provides valuable data on magma movement, gas emissions, and pyroclastic flows. Despite its
-                        beauty, the volcano remains highly dangerous, with lahars (mudflows) and pyroclastic surges
-                        posing constant threats. Advanced monitoring systems, including seismographs and satellite
-                        imaging, help predict eruptions and save lives.</p>
-                    <a href="#!"><img class="img-fluid" src="../static/images/Mayon2.jpg" alt="..."></a>
+                    <p>
+                        The first settlers of the town of Daraga came from a place called Budiao. Under the leadership
+                        of Juan Salcedo, the Spaniards arrived and established this village. The name "Budiao" is
+                        derived from the word "badjao," which means "the greatest," as demonstrated by the "ilustrados"
+                        (educated elite) among the spectators of bullfights. In Budiao, there was a designated area for
+                        the battle between men and bulls, following a tradition reminiscent of ancient Rome.
+                    </p>
+                    <p>For the Spaniards, watching and observing bullfights brought a unique kind of pleasure. However,
+                        in 1578, the town was re-established in Cagsawa. This relocation was due to the people's fear of
+                        another eruption from Mayon Volcano, which could destroy their properties and livelihoods. On
+                        June 12, 1772, the town was moved once again—this time farther away from the volcano. It was
+                        relocated to the top of a hill where the famous Daraga Church now stands.
+                    </p>
+                    <p>On February 1, 1814, after more than 40 years of peaceful living in their new settlement, an
+                        unexpected tragedy struck. Mayon Volcano erupted, covering the entire town in ash. The volcano's
+                        unrest did not cease, so in 1993, the residents were permanently relocated to their new home in
+                        the southern barangay of Anislag.
+                    </p>
+                    <h2 class="section-heading">Bull Fighting</h2>
+                    <p>Barangay Budiao is known for its "bullfighting," where "bullfighters" and bulls face off in a
+                        designated "bull arena" located in Barangay Budiao, Daraga, Albay.</p>
+                    <p>Bullfighting is said to be one of Spain's influences on the Philippines, considered both a
+                        ceremony and a festival. Beyond that, it is a cultural symbol for the residents of Barangay
+                        Budiao, as it was once a common tradition. Because of this, it is regarded as part of the
+                        barangay's history.</p>
+                    <p>Many claim that bullfighting and cockfighting are similar, but the two have significant
+                        differences. Cockfighting, or sabong, is a match between two roosters, while bullfighting is a
+                        contest where a bull is pitted against a "bullfighter" (a player usually riding a horse), also
+                        called a torero. There are three types of toreros: the matador de toros (the main fighter), the
+                        picador (two supporters of the matador positioned behind the horse), and the banderillero (three
+                        supporters of the matador stationed at the horse's feet).</p>
+                    <p>The toreros begin their attack once the bull enters the arena. The fight is divided into four
+                        parts. First, the matador de toros observes the bull's movements, and the picador initiates the
+                        first strike. Second, the banderilleros stab colorful sticks with spikes into the bull's muscles
+                        to weaken its movements and prevent attacks. Next comes the "death" phase, executed by the
+                        matador de toros, who attacks the bull's aorta (main blood vessel) with a sword, potentially
+                        leading to the bull's death. Finally, the fight is judged. The Presidente (head judge) and the
+                        spectators determine the outcome.</p>
+                    <p>Another difference between cockfighting and bullfighting is the prize. In cockfighting, winners
+                        receive money, while in bullfighting, the matador may be awarded the bull's ear and tail,
+                        depending on the judgment of the Presidente and the audience. Beyond physical rewards, one of
+                        the most coveted honors is recognition as a skilled bullfighter.</p>
+                    <p>Because of this, bullfighting is seen as an activity contrary to the teachings of the Church, as
+                        it is considered a form of gambling. It is also said to violate Christian principles, which
+                        emphasize valuing animals as part of human responsibility. Additionally, it is viewed as a
+                        practice that leads to the "senseless" death of bulls. Despite all this, bullfighting remained a
+                        popular form of entertainment in the past. It was once recognized as a daily tradition and is
+                        now acknowledged as part of history.</p>
+                    <h2 class="section-heading">The Devil in "Apay"</h2>
+                    <p>This is a barber’s tale that became famous in their barangay. According to them, it is about a
+                        married couple—a man and a woman—who once lived in Budiao. Their relationship turned sour due to
+                        the husband’s infidelity.</p>
+                    <p>One day, the wife was searching for her husband, but the man hid among the leaves of a taro
+                        plant, locally called apay. However, his wife spotted him and began cursing and shouting,
+                        "Jusmiyong apay na an!" ("Good grief, it's the apay devil!"). From that moment on, the legend of
+                        The Devil in the Apay began.</p>
+                    <h2 class="section-heading">Budiao Ruins: The Distinctive</h2>
+                    <blockquote class="blockquote">The Budiao Ruins are recognized as a damaged church located in
+                        Barangay Budiao, Daraga, Albay. It is dedicated to the Assumption of Our Lady, symbolizing
+                        Budiao's history as a town.</blockquote>
+                    <p>Budiao began as a visita (mission chapel) under the parish of St. James the Great in Cagsawa,
+                        then part of the province of Camarines. In 1772, the people of Cagsawa petitioned the Superior
+                        Government in Manila to relocate the visita to Daraga due to fears of potential destruction from
+                        Mayon Volcano's eruptions. The request was approved, but the transfer did not proceed because
+                        Fermin Zaldivar, the new Alcalde Mayor of Camarines, opposed it. Instead, he advocated for
+                        moving to Budiao, leading to its establishment as a town on November 29, 1786, through a decree
+                        by the Superior Government.</p>
+                    <p>At the same time, Fr. Juan Duares resisted the transfer and the leadership of the new parish.
+                        Fortunately, in 1798, Fr. Francisco Aragoes took over the administration of the Budiao and
+                        Cagsawa parish. The church was constructed using volcanic stones, with crushed shells and corals
+                        serving as mortar. However, it was destroyed by the eruption of Mayon Volcano on February 1,
+                        1814, when pyroclastic flows devastated the church building, killing 200 people inside. This was
+                        followed by lahars and other volcanic debris that buried the structure up to the top of its
+                        walls.</p>
+                    <p>In 2018, archaeological excavations revealed that the Budiao Church might have been larger than
+                        Cagsawa Church, possibly reaching a height of 10 meters. That same year, the first holy mass was
+                        held within the ruins after more than 200 years since its destruction.</p>
+                    <p>In 2017, the Municipal Government of Daraga declared the Budiao Ruins as a local heritage site.
+                    </p>
+                    <p>Today, the Budiao Ruins are officially recognized as the 5th National Cultural Treasure in the
+                        province of Albay.</p>
+                    <a href="#!"><img class="img-fluid" src="../static/images/daraga-church.png" alt="..."></a>
                     <span class="caption text-muted">Mayon Volcano along with the Daraga Church</span>
-                    <h2 class="section-heading">Folklore & Local Legnecs</h2>
-                    <p>The Legend of Daragang Magayon – The most famous legend tells of the beautiful princess Magayon
-                        (meaning "beautiful" in Bicolano) who fell in love with a warrior named Panganoron. Their tragic
-                        love story ended in death, and it is said that Mayon grew from Magayon’s grave, with Panganoron
-                        as the clouds that often shroud the peak.</p>
-                    <p>The Fire of Gugurang – Ancient Bicolanos believed that the volcano was the home of Gugurang,
-                        their supreme god who controlled fire and punished the wicked. Eruptions were seen as his wrath
-                        against immoral acts.</p>
-                    <p> The Battle of Gods – Another myth tells of a conflict between Gugurang and his rival, Asuang
-                        (the god of evil). Asuang’s attempts to steal Gugurang’s fire caused eruptions and earthquakes.
-                    </p>
-                    <p>The Guardian Spirits – Locals believe that ancestral spirits dwell within Mayon, protecting the
-                        land. Offerings are sometimes made to appease them and prevent eruptions.
-                    </p>
-                    <p>The White Rock (Lignon Hill) – A legend says that a giant white rock near Mayon was a piece of
-                        the volcano thrown during a battle between gods, now serving as a natural landmark.
-                    </p>
-                    <h2 class="section-heading">Lancmarks (Tourist Spots)</h2>
-                    <p> Cagsawa Ruins – The remains of an 18th-century church buried by the 1814 eruption, now a famous
-                        tourist spot and photography site.
-                    </p>
-                    <p>Lignon Hill – A viewpoint offering panoramic views of Mayon and Legazpi City, with a zipline
-                        adventure for thrill-seekers.
-                    </p>
-                    <p>Sumlang Lake – A serene crater lake with bamboo raft rides, perfect for Mayon’s reflection shots.
-                    </p>
-                    <p>Mayon Skyline Viewdeck – Located in Tabaco City, this spot provides one of the closest views of
-                        the volcano’s summit.</p>
-                    <p>Quitinday Green Hills Formation – Rolling hills resembling Bohol’s Chocolate Hills, with a
-                        stunning Mayon backdrop.</p>
-                    <blockquote class="blockquote">Mayon Volcano is more than just a natural wonder—it is the heart of
-                        Bicolano culture, history, and identity. Its eruptions have shaped the land and the resilience
-                        of the people, while its beauty inspires art, literature, and pride. The volcano’s presence is
-                        intertwined with local spirituality, as seen in myths and rituals that honor its power.
-                    </blockquote>
-                    <blockquote class="blockquote">For Bicolanos, Mayon symbolizes both danger and majesty, reminding
-                        them of nature’s unpredictability and their ability to adapt. Festivals like the Magayon
-                        Festival celebrate this connection, blending tradition with modern appreciation. Whether as a
-                        scientific marvel, a tourist attraction, or a cultural icon, Mayon remains an enduring symbol of
-                        the Bicol Region’s strength and beauty.
-                    </blockquote>
                 </div>
             </div>
         </div>
