--- a/contents/church-ruins.html
+++ b/contents/church-ruins.html
@@ -23,7 +23,7 @@
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="logo navbar-brand" href="about.html">About</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
@@ -47,7 +47,7 @@
     </nav>
     <div class="header">
         <div class="info">
-            <h1 class="title-home">Mt. Mayon</h1>
+            <h1 class="title-home">Budiao Ruins</h1>
         </div>
     </div>
     <article class="mb-4">
