--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body translate="no">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="logo navbar-brand" href="index.html">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
@@ -88,15 +88,13 @@
                         <div class="blog-post">
                             <div class="blog-thumbnail">
                                 <img src="./static/images/mayon.jpg"
-                                    alt="Luggage">
+                                    alt="Mayon">
                             </div>
                             <div class="blog-info">
                                 <h3 class="blog-title">
                                     <a href="./contents/mayon.html">Mount Mayon</a>
                                 </h3>
                                 <div class="blog-meta">Daraga, Albay</div>
-<<<<<<< HEAD
-=======
                                 <p class="blog-description">Mayon Volcano, located in the province of Albay in the Bicol Region
                                      of the Philippines, is renowned for its near-perfect symmetrical cone shape.
                                      Standing at 2,463 meters (8,081 feet), it is one of the most active volcanoes in the country and a prominent symbol of natural beauty and danger. 
@@ -124,76 +122,49 @@
 
                         <div class="blog-post">
                             <div class="blog-thumbnail">
-                                <a href="./contents/cagsawa-ruins.html"><img src="./static/images/cagsawaruins-poster.jpg"
-                                    alt="Cagsawa Church"></a>
+                                <img src="./static/images/mayon.jpg"
+                                    alt="Luggage">
                             </div>
                             <div class="blog-info">
                                 <h3 class="blog-title">
                                     <a href="./contents/daraga_church.html">Daraga Church</a>
                                 </h3>
                                 <div class="blog-meta">Daraga, Albay</div>
->>>>>>> 699f2e7fbd44781dca942f4132066f6b6718deb0
                                 <p class="blog-description">DKiksadjfslhsshfdsahjfdskjfhskdjhfadskljfhdskjlfhsakldf
                                     hdsakjlfkdjsffhsalkhfdalksjhfdsalkjhdsakjlhdsafkjh</p>
                             </div>
                         </div>
 
-                        <!-- Blog Post 2 -->
                         <div class="blog-post">
                             <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Travel">
+                                <img src="./static/images/mayon.jpg"
+                                    alt="Luggage">
                             </div>
                             <div class="blog-info">
-                                <div class="blog-meta">May 23, 2025</div>
                                 <h3 class="blog-title">
-                                    <a href="#">Ampogi ni Eury</a>
+                                    <a href="./contents/daraga_church.html">Daraga Church</a>
                                 </h3>
-                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
+                                <div class="blog-meta">Daraga, Albay</div>
+                                <p class="blog-description">DKiksadjfslhsshfdsahjfdskjfhskdjhfadskljfhdskjlfhsakldf
+                                    hdsakjlfkdjsffhsalkhfdalksjhfdsalkjhdsakjlhdsafkjh</p>
                             </div>
                         </div>
 
                         <div class="blog-post">
                             <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Travel">
+                                <img src="./static/images/mayon.jpg"
+                                    alt="Luggage">
                             </div>
                             <div class="blog-info">
-                                <div class="blog-meta">May 23, 2025</div>
                                 <h3 class="blog-title">
-                                    <a href="#">Ampogi ni Eury</a>
+                                    <a href="./contents/daraga_church.html">Daraga Church</a>
                                 </h3>
-                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
+                                <div class="blog-meta">Daraga, Albay</div>
+                                <p class="blog-description">DKiksadjfslhsshfdsahjfdskjfhskdjhfadskljfhdskjlfhsakldf
+                                    hdsakjlfkdjsffhsalkhfdalksjhfdsalkjhdsakjlhdsafkjh</p>
                             </div>
                         </div>
-
-                        <div class="blog-post">
-                            <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Travel">
-                            </div>
-                            <div class="blog-info">
-                                <div class="blog-meta">May 23, 2025</div>
-                                <h3 class="blog-title">
-                                    <a href="#">Ampogi ni Eury</a>
-                                </h3>
-                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
-                            </div>
-                        </div>
-
-                        <div class="blog-post">
-                            <div class="blog-thumbnail">
-                                <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                                    alt="Travel">
-                            </div>
-                            <div class="blog-info">
-                                <div class="blog-meta">May 23, 2025</div>
-                                <h3 class="blog-title">
-                                    <a href="#">Ampogi ni Eury</a>
-                                </h3>
-                                <p class="blog-description">Hi Euryyyyyyyyyyyyyy</p>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
