--- a/contents/cuisine-identity.html
+++ b/contents/cuisine-identity.html
@@ -213,7 +213,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="small text-center text-muted fst-italic">Copyright © Your Website 2023</div>
+                    <div class="small text-center text-muted fst-italic">Copyright © 5 Wonders of Daraga 2025</div>
                 </div>
             </div>
         </div>
